add info table + cool facts list

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+
   <head>
     <meta charset="UTF-8">
     <title>China</title>
@@ -8,14 +8,46 @@
   </head>
   
   <body>
-
     <div id="content">
       <h1>你好! (Nǐ hǎo!)</h1>
-      <p>Let's Look at some cool pictures from China:</p>
+      <p><b>China</b>, officially the People's Republic of China, is a country in East Asia. </p>
+      <table class="table">
+          <tbody>
+              <tr>
+                  <td><b>Capital</b></td>
+                  <td><a href="https://en.wikipedia.org/wiki/Beijing" target="_blank">Beijing (北京市)</a></td>
+              </tr>
+              <tr>
+                  <td><b>Area</b></td>
+                  <td>9,596,961 km<sup>2</sup></td>
+                </tbody>
+              </tr>
+              <tr>
+                  <td><b>Population</b></td>
+                  <td>1,400,050,000</td>
+              </tr>
+              <tr>
+                  <td><b>Currency</b></td>
+                  <td>Renminbi (yuan; ¥; CNY)</td>
+              </tr>
+              <tr>
+                  <td><b>Time zone</b></td>
+                  <td>UTC+8 (China Standard Time)</td>
+              </tr>
+
+          </tbody>
+        </table>
+      <p>Some cool facts about China:</p>
+      <ol>
+        <li>The Chinese New Year celebration lasts for 15 days.</li>
+        <li>China’s railway lines are so extensive and long that they could loop around Earth twice.</li>
+        <li>2,200 years ago, the game that later turned into football (soccer) was invented in China.</li>      
+      </ol>
+      <p>For further information please visit <a href="https://en.wikipedia.org/wiki/China" target="_blank">China's wikipedia page</a></p>
+      <p>Now that we've covered the basics , let's look at some pictures from China:</p>
     </div>
 
     <div class="slideshow-container">
-
         <div class="slide fade">
             <img src="Images/China-1.jpg" style="width:100%">
         </div>
