--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <title>Discover China</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Hind:wght@500&display=swap" rel="stylesheet">
   </head>
   
   <body>
     <div id="content">
-      <h1>你好! (Nǐ hǎo!)</h1>
-      <p><b>China</b>, officially the People's Republic of China, is a country in East Asia. </p>
+      <h1>Discover China 🇨🇳</h1>
+      <h2>你好! (Nǐ hǎo!)</h2>
+      <p><b>China</b> (中国), officially the People's Republic of China, is a country in East Asia. </p>
       <!-- Information table -->
       <table class="table">
           <tbody>
@@ -43,14 +45,14 @@
       <!-- China's history youtube video -->
       <iframe src="https://www.youtube.com/embed/YP1qjTzxQNE" title="The Animated History of China video"></iframe>  
       
-      <p>Some cool facts about China:</p>
+      <h3>Some cool facts about China:</h3>
       <ol>
         <li>The Chinese New Year celebration lasts for 15 days.</li>
         <li>China’s railway lines are so extensive and long that they could loop around Earth twice.</li>
         <li>2,200 years ago, the game that later turned into football (soccer) was invented in China.</li>      
       </ol>
       <p>For further information please visit <a href="https://en.wikipedia.org/wiki/China" target="_blank">China's wikipedia page</a></p>
-      <p>Now that we've covered the basics , let's look at some pictures from China:</p>
+      <h3>Now that we've covered the basics , let's look at some pictures from China:</h3>
     </div>
     
     <!-- China's picture slideshow -->
