--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Discover China</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Hind:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@700&family=Lato:wght@300&display=swap" rel="stylesheet">
   </head>
   
   <body>
@@ -86,6 +86,7 @@
         <a class="next" onclick="advanceSlide(1)">&#187</a>
         <a class="prev" onclick="advanceSlide(-1)">&#171</a>
     </div>
+    <br>
     <script src="script.js"></script>
   </body>
 </html>
