add fetch function to get random chinese phrases when clicking the button (Servlet - step 2)

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -52,6 +52,10 @@
         <li>2,200 years ago, the game that later turned into football (soccer) was invented in China.</li>      
       </ol>
       <p>For further information please visit <a href="https://en.wikipedia.org/wiki/China" target="_blank">China's wikipedia page</a></p>
+      <br>
+      <button onclick="getChineseQuote()">Fetch a Chinese phrase!</button>
+      <div id="quote-container"></div>
+      <br>
       <h3>Now that we've covered the basics , let's look at some pictures from China:</h3>
     </div>
     
