divide data and random phrase servlets

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -53,7 +53,7 @@
       </ol>
       <p>For further information please visit <a href="https://en.wikipedia.org/wiki/China" target="_blank">China's wikipedia page</a></p>
       <br>
-      <button onclick="getChineseQuote()">Fetch a Chinese phrase!</button>
+      <button onclick="getChinesePhrase()">Fetch a Chinese phrase!</button>
       <div id="quote-container"></div>
       <br>
       <h3>Now that we've covered the basics , let's look at some pictures from China:</h3>
