--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -54,7 +54,10 @@
       <p>For further information please visit <a href="https://en.wikipedia.org/wiki/China" target="_blank">China's wikipedia page</a></p>
       <br>
       <button onclick="getChinesePhrase()">Fetch a Chinese phrase!</button>
-      <div id="quote-container"></div>
+      <div id="phrase-container"></div>
+      <br>
+      <button onclick="getComments()">step-3 -TEMP- button!</button>
+      <div id="comments-container"></div>
       <br>
       <h3>Now that we've covered the basics , let's look at some pictures from China:</h3>
     </div>
