add loading comments from Datastore (Servlet - step 5)

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -93,12 +93,12 @@
     <br>
     <form action="/data" method="POST">
 
-      <p>Add a comment:</p>
+      <h3>Add a comment:</h3>
       <textarea name="text-input"></textarea>
       <br>
       <input type="submit" />
       <br>
-      <p>Previous Comments:</p>
+      <h3>Previous Comments:</h3>
       <div id="comments-container"></div>
     </form>
     <br>
