--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -97,9 +97,13 @@
       <textarea name="text-input"></textarea>
       <br>
       <input type="submit" />
-      <br>
       <h3>Previous Comments:</h3>
+      <label for="comments-amount">Number of comments to display: </label>
+      <input type="number" id="comments-amount" name="comments-amount" min="1" max="7", onchange="getComments()">
+      <br>
       <div id="comments-container"></div>
+      <br>
+      <button onclick="clearComments()" id="delete-button">Delete all comments</button>
     </form>
     <br>
     <script src="script.js"></script>
