add information about provinces of China (pratice pagination)

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -52,6 +52,16 @@
         <li>China’s railway lines are so extensive and long that they could loop around Earth twice.</li>
         <li>2,200 years ago, the game that later turned into football (soccer) was invented in China.</li>      
       </ol>
+      <h3>Learn more about some provinces of China:</h3>
+      <div class="provinse-pagination">
+          <a href="/yunnan.html" target="province-iframe">Yunnan</a>
+          <a href="/sichuan.html" target="province-iframe">Sichuan</a> 
+          <a href="/guangxi.html" target="province-iframe">Guangxi</a>
+          <a href="/hubei.html" target="province-iframe">Hubei</a>
+          <a href="/gansu.html" target="province-iframe">gansu</a> 
+      </div>
+      <br>
+      <iframe name="province-iframe" src="/yunnan.html" id="province-iframe"></iframe>  
       <p>For further information please visit <a href="https://en.wikipedia.org/wiki/China" target="_blank">China's wikipedia page</a></p>
       <br>
       <button onclick="getChinesePhrase()">Fetch a Chinese phrase!</button>
