improve page visibility

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,43 +16,60 @@
       <p>
           <strong>China</strong> (中国), officially the People's Republic of China, is a country in East Asia. 
       </p>
-      <!-- Information table -->
-      <table class="table">
-          <tbody>
-              <tr>
-                  <td><strong>Capital</strong></td>
-                  <td><a href="https://en.wikipedia.org/wiki/Beijing" target="_blank">Beijing (北京市)</a></td>
-              </tr>
-              <tr>
-                  <td><strong>Area</strong></td>
-                  <td>9,596,961 km<sup>2</sup></td>
+      <div class="row">
+        <div class="column">
+            <!-- Information table -->
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td><strong>Capital</strong></td>
+                        <td><a href="https://en.wikipedia.org/wiki/Beijing" target="_blank">Beijing (北京市)</a></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Area</strong></td>
+                        <td>9,596,961 km<sup>2</sup></td>
+                        </tbody>
+                    </tr>
+                    <tr>
+                        <td><strong>Population</strong></td>
+                        <td>1,400,050,000</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Currency</strong></td>
+                        <td>Renminbi (yuan; ¥; CNY)</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Time zone</strong></td>
+                        <td>UTC+8 (China Standard Time)</td>
+                    </tr>
                 </tbody>
-              </tr>
-              <tr>
-                  <td><strong>Population</strong></td>
-                  <td>1,400,050,000</td>
-              </tr>
-              <tr>
-                  <td><strong>Currency</strong></td>
-                  <td>Renminbi (yuan; ¥; CNY)</td>
-              </tr>
-              <tr>
-                  <td><strong>Time zone</strong></td>
-                  <td>UTC+8 (China Standard Time)</td>
-              </tr>
-          </tbody>
-        </table>
-      <br>  
-      
+            </table>
+        </div>
+        <div class="column">
+            <div id="china-map-container"></div>
+        </div>
+      </div>
+      <h3>Demographics of China</h3>
+      <p id="demographic-info"> 
+          The <strong>Han (汉)</strong> people are the largest ethnic group in mainland China 
+          (~1.2 billion; 91.51% of the population).
+          Besides the Han Chinese majority, 55 other ethnic (minority) groups are categorized in present China, 
+          numbering approximately 105 million people (8%), mostly concentrated in the bordering northwest, 
+          north, northeast, south and southwest but with some in central interior areas.
+      </p>
+      <div id="demographic-chart-container"></div>
+
       <!-- China's history youtube video -->
       <iframe src="https://www.youtube.com/embed/YP1qjTzxQNE" title="The Animated History of China video"></iframe>  
       
       <h3>Some cool facts about China:</h3>
-      <ol>
-        <li>The Chinese New Year celebration lasts for 15 days.</li>
-        <li>China’s railway lines are so extensive and long that they could loop around Earth twice.</li>
-        <li>2,200 years ago, the game that later turned into football (soccer) was invented in China.</li>      
-      </ol>
+      <div id="list-container">
+          <ol>
+            <li>The Chinese New Year celebration lasts for 15 days.</li>
+            <li>China’s railway lines are so extensive and long that they could loop around Earth twice.</li>
+            <li>2,200 years ago, the game that later turned into football (soccer) was invented in China.</li>      
+          </ol>
+      </div>
       <h3>Learn more about some provinces of China:</h3>
       <div class="provinse-pagination">
           <a href="/yunnan.html" target="province-iframe">Yunnan</a>
@@ -115,18 +132,6 @@
       <br>
       <button onclick="clearComments()" id="delete-button">Delete all comments</button>
     </form>
-    <br>
-    <h3>Demographics of China</h3>
-    <div id="demographic-containar">
-        <p> 
-            The <strong>Han (汉)</strong> people are the largest ethnic group in mainland China.
-            In 2010, 91.51% of the population were classified as Han (~1.2 billion). 
-            Besides the Han Chinese majority, 55 other ethnic (minority) groups are categorized in present China, 
-            numbering approximately 105 million people (8%), mostly concentrated in the bordering northwest, 
-            north, northeast, south and southwest but with some in central interior areas.
-        </p>
-        <div id="demographic-chart-container"></div>
-    </div>
   </body>
   <script src="script.js"></script>
   <script src="charts_script.js"></script>
