--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>
   </head>
   
-  <body>
+  <body onload="getComments()">
     <div id="content">
       <h1>Discover China 🇨🇳</h1>
       <h2>你好! (Nǐ hǎo!)</h2>
@@ -126,7 +126,7 @@
       <input type="submit" />
       <h3>Previous Comments:</h3>
       <label for="comments-amount">Number of comments to display: </label>
-      <input type="number" id="comments-amount" name="comments-amount" min="1" max="7" onchange="getComments()">
+      <input type="number" id="comments-amount" name="comments-amount" min="1" max="7" value="5" onchange="getComments()">
       <br>
       <div id="comments-container"></div>
       <br>
